refactor: index file + absolute path file

--- a/component/header.html
+++ b/component/header.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="../scss/style.css" />
+  <link rel="stylesheet" href="/w3_30-6/scss/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -11,29 +11,29 @@
 <body>
   <div class="header">
     <div class="header__logo">
-      <a href="../pages/index.html"
-        ><img src="../assets/full-logo.svg" alt="logo"
+      <a href="/w3_30-6/index.html"
+        ><img src="/w3_30-6/assets/full-logo.svg" alt="logo"
       /></a>
     </div>
     <div class="header__nav">
       <ul>
         <li class="header__nav-item body2--medium">
-          <a href="../pages/index.html">Home</a>
+          <a href="/w3_30-6/index.html">Home</a>
         </li>
         <li class="header__nav-item body2--medium">
-          <a href="../pages/service.html">Service</a>
+          <a href="/w3_30-6/pages/service.html">Service</a>
         </li>
         <li class="header__nav-item body2--medium">
-          <a href="../pages/feature.html">Feature</a>
+          <a href="/w3_30-6/pages/feature.html">Feature</a>
         </li>
         <li class="header__nav-item body2--medium">
-          <a href="../pages/product.html">Product</a>
+          <a href="/w3_30-6/pages/product.html">Product</a>
         </li>
         <li class="header__nav-item body2--medium">
-          <a href="../pages/testimonial.html">Testimonial</a>
+          <a href="/w3_30-6/pages/testimonial.html">Testimonial</a>
         </li>
         <li class="header__nav-item body2--medium">
-          <a href="../pages/faq.html">FAQ</a>
+          <a href="/w3_30-6/pages/faq.html">FAQ</a>
         </li>
       </ul>
     </div>
@@ -44,27 +44,33 @@
       </button>
     </div>
     <div class="header__menu-icon">
-      <img src="../assets/menu.svg" width="28px" height="28px" alt="" />
+      <img src="/w3_30-6/assets/menu.svg" width="28px" height="28px" alt="" />
     </div>
   </div>
   <div class="header__menu-hidden">
     <div class="header__close-btn">
-      <img src="../assets/close.svg" alt="" />
+      <img src="/w3_30-6/assets/close.svg" alt="" />
     </div>
     <div class="header__menu-list">
-      <a href="../pages/index.html" class="header__menu-item body1--medium"
+      <a href="/w3_30-6/index.html" class="header__menu-item body1--medium"
         >Home</a
-      ><a href="../pages/service.html" class="header__menu-item body1--medium"
+      ><a
+        href="/w3_30-6/pages/service.html"
+        class="header__menu-item body1--medium"
         >Service</a
-      ><a href="../pages/feature.html" class="header__menu-item body1--medium"
+      ><a
+        href="/w3_30-6/pages/feature.html"
+        class="header__menu-item body1--medium"
         >Feature</a
-      ><a href="../pages/product.html" class="header__menu-item body1--medium"
+      ><a
+        href="/w3_30-6/pages/product.html"
+        class="header__menu-item body1--medium"
         >Product</a
       ><a
-        href="../pages/testimonial.html"
+        href="/w3_30-6/pages/testimonial.html"
         class="header__menu-item body1--medium"
         >Testimonial</a
-      ><a href="../pages/faq.html" class="header__menu-item body1--medium"
+      ><a href="/w3_30-6/pages/faq.html" class="header__menu-item body1--medium"
         >FAQ</a
       ><a href="" class="header__menu-item body1--medium">Signup</a
       ><a href="" class="header__menu-item body1--medium">Log in</a>
@@ -93,7 +99,7 @@
           </div>
         </div>
         <div class="slider__img">
-          <img src="../assets/slider-img.svg" alt="" />
+          <img src="/w3_30-6/assets/slider-img.svg" alt="" />
         </div>
       </div>
       <div class="slider__item">
@@ -117,7 +123,7 @@
           </div>
         </div>
         <div class="slider__img">
-          <img src="../assets/slider-img.svg" alt="" />
+          <img src="/w3_30-6/assets/slider-img.svg" alt="" />
         </div>
       </div>
       <div class="slider__item">
@@ -141,21 +147,25 @@
           </div>
         </div>
         <div class="slider__img">
-          <img src="../assets/slider-img.svg" alt="" />
+          <img src="/w3_30-6/assets/slider-img.svg" alt="" />
         </div>
       </div>
     </div>
     <div class="slider__dot-container">
-      <img src="../assets/dot.svg" alt="" class="dot slider__dot--active" />
-      <img src="../assets/dot.svg" alt="" class="dot" />
-      <img src="../assets/dot.svg" alt="" class="dot" />
+      <img
+        src="/w3_30-6/assets/dot.svg"
+        alt=""
+        class="dot slider__dot--active"
+      />
+      <img src="/w3_30-6/assets/dot.svg" alt="" class="dot" />
+      <img src="/w3_30-6/assets/dot.svg" alt="" class="dot" />
     </div>
     <div class="slider__btn-container">
       <div class="pre-btn">
-        <img src="../assets/arrow-left.svg" alt="" />
+        <img src="/w3_30-6/assets/arrow-left.svg" alt="" />
       </div>
       <div class="next-btn">
-        <img src="../assets/arrow-right.svg" alt="" />
+        <img src="/w3_30-6/assets/arrow-right.svg" alt="" />
       </div>
     </div>
   </div>
