--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,7 +47,7 @@
       display: none;
     }
   }
-  
+
   &__menu-icon {
     position: absolute;
     top: 3rem;
@@ -705,10 +705,13 @@
     width: 100%;
   }
   &__nav-container {
-    @include flexbox($align: flex-start, $direction: column, $gap: 1.2rem);
     width: 100%;
-    li {
+    ul {
+      @include flexbox($align: flex-start, $direction: column, $gap: 1.2rem);
       width: 100%;
+      li {
+        width: 100%;
+      }
     }
   }
   &__input {
